# chrono-block-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri-macos.yml  build-tauri-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  migrations.rs  mod.rs
src-tauri/src/models/: mod.rs
src/components/: header.tsx  theme-toggle.tsx
src/components/calendar/: calendar-view.tsx  time-grid-view.tsx
src/components/daily/: daily-view.tsx  pomodoro-panel.tsx  project-picker-dialog.tsx  task-list.tsx  task-progress-pie.tsx  time-block-editor.tsx  time-block-list.tsx  week-view.tsx
src/components/ui/: dialog.tsx  tooltip.tsx
src/lib/: db.ts  utils.ts
src/store/: index.ts
src/types/: index.ts
